Update: - Extend agent error handler - Update swagger and add not found error - Local discoveries are never sent to XMPP
